# OBDPHAWD

./: .gitignore  OBDPHAWD.sln  README.md  build.sh
.github/: CODEOWNERS  copilot-instructions.md  copilot-knowledge.md  copilot-workspace.yml
.github/workflows/: copilot-validation.yml
examples/: python_basic_scan.py
src/OBDPHAWD.Console/: OBDPHAWD.Console.csproj  Program.cs
src/OBDPHAWD.Core/: Class1.cs  IObdCommunication.cs  ObdCommand.cs  ObdCommands.cs
src/c/: CMakeLists.txt
src/c/include/: bluetooth_le.h  obdphawd.h
src/c/src/: obdphawd.c
src/java/: pom.xml
src/java/com/phawd/obdphawd/core/: ConnectionManager.java
src/java/com/phawd/obdphawd/core/exceptions/: ConnectionException.java  OBDPHAWDException.java  TimeoutException.java
src/python/: requirements.txt  setup.py
src/python/obdphawd/: __init__.py
src/python/obdphawd/bluetooth/: __init__.py  ble_adapter.py  device_scanner.py
src/python/obdphawd/core/: __init__.py  connection_manager.py  exceptions.py
src/python/obdphawd/protocols/: __init__.py  base_protocol.py  obd2.py
src/python/obdphawd/utils/: __init__.py  data_converter.py  logging_config.py
tests/OBDPHAWD.Core.Tests/: OBDPHAWD.Core.Tests.csproj  UnitTest1.cs
tests/python/: test_obd2_protocol.py
